@@ -29,7 +29,10 @@ svn trunk
 * Exceptions with unicode messages don't cause the collector to fail.
 
 * Sometimes ErrorMiddleware would not call start_response properly;
-  this is fixed (from inducer).
+  this is fixed (from Andreas Kloecker).
+
+* ``paste.fixture.TestApp`` can store multiple cookie values
+  (previously only one cookie was stored; from Andrey Lebedev)
 
 1.6.1
 -----
